fixing shift involving the nav-icon-container

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1530,6 +1530,13 @@ input::placeholder {
   }
 
   .hero-img {
+    width: 100%;
+    max-width: 100vw;
+    height: auto;
+    min-height: 2rem;
+  }
+
+  .hero-img {
     display: block;
     max-width: 100vw
   }
@@ -2006,25 +2013,14 @@ input::placeholder {
     min-height: 3rem;
   }
 
-  .hero-img {
-    min-height: 2rem;
-  }
-
   .categories-title h2,
   .feature-title h2,
   .logo-container img,
   .nav-icon-container {
     width: 100%;
     max-width: 100vw;
-    min-height: 3.5rem;
+    min-height: 2rem;
     height: auto
-  }
-
-  .hero-img img {
-    padding: 0;
-    object-position: bottom;
-    object-fit: cover;
-    aspect-ratio: 2.278/1
   }
 
   .nav-icon-container {
@@ -2181,16 +2177,16 @@ input::placeholder {
     width: 100%;
     height: auto;
     max-width: 100vw;
+    min-height: 2rem;
     overflow: hidden
   }
 
   .hero-img img {
     width: 100%;
-    height: 100%;
-    min-height: 2rem;
+    height: auto;
     object-fit: cover;
     display: block;
-    aspect-ratio: 2.2/1
+    aspect-ratio: 2.28/1
   }
 
   .menu-toggle {
@@ -2312,13 +2308,12 @@ input::placeholder {
   }
 
   .hero-img {
+    min-height: 1rem;
     max-width: 100vw;
     overflow: hidden
   }
 
   .hero-img img {
-
-    min-height: 2rem;
     object-fit: cover;
     display: block;
     aspect-ratio: 80 / 51;
